--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "lodash-es": "^4.17.21",
@@ -23,8 +24,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
