--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "!node_modules/"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
